--- a/frontend/src/components/Header/header.module.css
+++ b/frontend/src/components/Header/header.module.css
@@ -4,6 +4,12 @@
     align-items: flex-end;
 }
 
+
+.navbar{
+    padding: 0 !important;
+}
+
+
 .navbar_menu_main ul{
     list-style: none;
     display: flex;
@@ -15,11 +21,36 @@
 .navbar_menu_main ul li a{
     text-decoration: none;
     color: #000;
-    padding-left: 20px;
+    transition: 0.5s;
+    font-weight: 300;
+    padding:0  8px;
+    padding-bottom: 5px;
+    border-bottom: 1px solid transparent;
+    margin-left: 10px;
 }
 
-.header_main{
+
+.navbar_menu_main ul li:not(:last-child) a{
+    margin-right: 10px;
+}
+
+
+
+.navbar_menu_main ul li:hover a{
+    border-bottom: 1px solid #000;
+   
+}
+
+.Header_main{
+    box-shadow: 0px 4px 11px 0px grey;
+}
+
+.header_body{
     width: 80%;
     margin: auto;
-    padding: 20px 0;
+}
+
+.header_body img{
+    width: 160px;
+    height: 70px;
 }
