--- a/frontend/src/screen/Home/home.module.css
+++ b/frontend/src/screen/Home/home.module.css
@@ -6,8 +6,8 @@ section.homeBanner{
     width: 100%;
     position: relative;
     /* background-color: #00000000; */
-    background-blend-mode: overlay;
-    background-attachment: fixed;
+    /* background-blend-mode: overlay; */
+    /* background-attachment: fixed; */
 }
 
 
