--- a/frontend/src/screen/Home/home.module.css
+++ b/frontend/src/screen/Home/home.module.css
@@ -1,13 +1,9 @@
 section.homeBanner{
-    /* background: url(../../assets/hotelBg.jpg); */
-    background: #002244;
+    background: #5757579e;
     background-position: center;
     background-size: cover;
     width: 100%;
     position: relative;
-    /* background-color: #00000000; */
-    /* background-blend-mode: overlay; */
-    /* background-attachment: fixed; */
 }
 
 
@@ -17,14 +13,15 @@ section.homeBanner{
     display: flex;
     justify-content: center;
     z-index: 99;
-    color: #fff;
+    color: rgb(0, 0, 0);
     align-items: center;
     flex-direction: column;
     height: 80vh;
 }
 
 .discount{
-    color: rgb(255, 251, 4)
+    color: rgb(45, 129, 206);
+    font-weight: 600;
 }
 
 .Home_inner_content h2{text-transform: capitalize;
@@ -37,7 +34,7 @@ section.homeBanner{
 
 .featuredHotel h1{
     text-align: center;
-    color: rgb(2, 22, 138);
+    color: rgb(45, 129, 206);
     margin: 50px 0 40px;
 }
 
@@ -46,7 +43,7 @@ section.homeBanner{
 }
 
 .findHotelBtn a{
-    background: rgb(2, 22, 138);
+    background: rgb(45, 129, 206);
     color: #fff;
     padding: 10px 60px;
     text-decoration: none;
@@ -73,7 +70,7 @@ section.homeBanner{
 
 
 .inner_card_main h6 span{
-    color: rgb(2, 22, 138)
+    color: rgb(45, 129, 206);
 }
 
 
@@ -87,5 +84,5 @@ section.homeBanner{
     border-radius: 4px;
     font-size: 14px;
     text-decoration: none;
-    background-color: rgb(2, 22, 138);
+    background-color: rgb(45, 129, 206);
 }
