--- a/frontend/src/components/Product/product.module.css
+++ b/frontend/src/components/Product/product.module.css
@@ -7,7 +7,8 @@
     padding: 5px 5px 15px ;
 }
 
-.inner_card_main img {width: 100%;}
+.inner_card_main img {width: 100%;
+height: 220px;}
 
 .inner_card_main h6{
     margin-bottom: 0;
