--- a/frontend/src/components/NotFound/notfound.module.css
+++ b/frontend/src/components/NotFound/notfound.module.css
@@ -1,7 +1,56 @@
+@import url('../../assets/fonts/KdamThmorPro.css');
+
 section.NotFound{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 80vh;
+    height: 100vh;
 }
+
+
+
+
+section.NotFound h1{
+    font-family: 'Kdam Thmor Pro', sans-serif;
+    font-size: 120px;
+    background: -webkit-linear-gradient(#1E213D, rgb(223, 0, 0));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+
+
+section.NotFound h3{
+    font-size: 16px;
+    font-weight: 600;
+    margin-top: 40px;
+    font-family: 'Kdam Thmor Pro', sans-serif;
+}
+section.NotFound  p{
+    text-align: center;
+    font-size: 14px;
+    font-weight: 500;
+    margin-bottom: 20px;
+}
+
+section.NotFound a{
+    background: #1E213D;
+    color: #fff;
+    text-align: center;
+    padding: 8px 24px;
+    font-size: 16px;
+    border-radius: 25px;
+    text-decoration: none;
+}
+
+@media (max-width: 767px) {
+    section.NotFound h1{
+        font-size: 80px;
+    }
+
+    section.NotFound h3{
+        margin-top: 30px;
+    }
+}
+
