--- a/frontend/src/components/Loader/loader.module.css
+++ b/frontend/src/components/Loader/loader.module.css
@@ -1,4 +1,20 @@
 .loader_main{
     text-align: center;
     color: rgb(0, 0, 0);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+    font-size: 20px;
+    flex-direction: column;
+}
+
+.loader_main span{
+    margin-top: 40px;
+}
+
+.for_height{
+    height: 5rem !important;
+    width: 5rem !important;
 }
