--- a/frontend/src/screen/client/Find_Hotel/findHotel.module.css
+++ b/frontend/src/screen/client/Find_Hotel/findHotel.module.css
@@ -35,9 +35,46 @@ section.FindHotel .inner_content form button{
     background: rgb(45, 129, 206);
     border: none;
     color: #fff;
-    padding: 0 10px;
+    padding: 0 16px;
 }
 
 section.FindHotel .inner_content input{
     height: 47px;
+    width: 680px;
+    border-radius: 0;
+
+}
+
+
+
+
+
+
+
+
+
+.inner_card_main{
+    margin: 20px 0;
+    box-shadow: 0px 0px 6px 1px rgb(202, 202, 202);
+    padding: 5px 5px 15px ;
+
+}
+
+.inner_card_main img {width: 100%;
+height: 220px;}
+
+.inner_card_main h6{
+    margin-bottom: 0;
+    margin-top: 10px;
+}
+
+
+.inner_card_main h6 span{
+    color: rgb(45, 129, 206);
+}
+
+
+
+.inner_card_main  button {
+    margin-top: 13px;
 }
